# sw-maestro-project

./: .gitmodules
projects/team11-mentorfit/: CLAUDE.md  README.md  pyproject.toml
projects/team11-mentorfit/app/: main.py
projects/team11-mentorfit/app/core/: config.py  rate_limit.py  schemas.py  upstage.py
projects/team11-mentorfit/app/data/: mentors.py
projects/team11-mentorfit/data/: mentors.json
projects/team11-mentorfit/data/sample/: member_profiles.json  sample_report.json  team_profiles.json
projects/team11-mentorfit/docs/: architecture.md  combination-generator-frs.md  combination-generator-module.md  combination-generator-report.md  design.docx  mentor-candidate-module.md  report-data-contract.md  report-module.md
projects/team11-mentorfit/tests/ui/: test_api_client.py
projects/team11-mentorfit/ui/: api_client.py  search_ui.py
projects/team11-mentorfit/ui/pages/: 1_📊_추천_리포트.py
projects/team2-twin-match/backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml  start.sh
projects/team2-twin-match/backend/.github/: PULL_REQUEST_TEMPLATE.md
projects/team2-twin-match/backend/app/: main.py
projects/team24-tailquest/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  backfill_materials.py  cleanup_orphans.py  pyproject.toml
projects/team24-tailquest/backend/app/: config.py  log_format.py  main.py
projects/team24-tailquest/backend/scripts/: migrate_users.py  wipe_dummy_sessions.py
projects/team32-SOMA-Recommender/soma-recommender-backend/: .env_share  .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
projects/team32-SOMA-Recommender/soma-recommender-backend/docs/: lecture_sync_ai_context.md  lecture_sync_db_test.md  lecture_sync_review_guide.md
projects/team36-cat-dog-diary/apps/ai-gateway/: CLAUDE.md  Dockerfile  pyproject.toml
projects/team40-ideareviewer/: .editorconfig  .gitattributes  .gitignore  README.md  app.py  graph.py  pyproject.toml  requirements.txt  schemas.py  state.py
projects/team40-ideareviewer/.jupyter_runtime/: jpserver-38604-open.html
projects/team40-ideareviewer/data/personas/: raw_personas.seed.json
projects/team40-ideareviewer/data/service_plans/: sample_brief.seed.json
projects/team40-ideareviewer/docs/: pr-f2-opinion-flow.md  schema_example.md  seed_json_example.md  setup.md  structure.md
projects/team40-ideareviewer/nodes/: f0_parse.py  f1_select.py  f2_opinion.py  f3_review.py  f4_supervisor.py
projects/team40-ideareviewer/scripts/: generate_user_cards.py  run_demo_streamlit.ps1  run_demo_trace.ps1  test_pipeline.py
projects/team40-ideareviewer/services/: persona_repository.py  pipeline_runner.py
projects/team40-ideareviewer/tests/: test_f4_supervisor.py  test_persona_repository.py  test_pipeline_runner.py
projects/team45-gominjunggyeso/: .dockerignore  .env.example  AGENTS.md  Dockerfile.api  Dockerfile.frontend  README.md  pyproject.toml  start.sh
projects/team45-gominjunggyeso/app/: api.py  graph.py  main.py  schemas.py
projects/team45-gominjunggyeso/app/agents/: __init__.py  debaters.py  judge.py  moderator.py  safety.py
projects/team45-gominjunggyeso/app/prompts/: __init__.py  debaters.py  judge.py  moderator.py
projects/team45-gominjunggyeso/frontend/: api.py  mock.py  style.css  ui.py
projects/team45-gominjunggyeso/scripts/: create-issues.sh  setup-labels.sh
projects/team54-prscribe/: .gitignore  pyproject.toml
projects/team54-prscribe/docs/specs/: README.md
projects/team54-prscribe/services/context_agent/: pyproject.toml
projects/team54-prscribe/services/frontend/: README.md  pyproject.toml
projects/team54-prscribe/services/orchestration/: pyproject.toml  run_demo.py
projects/team54-prscribe/services/researcher_agent/: .env.example  README.md  pyproject.toml
projects/team54-prscribe/services/writer_agent/: .env.example  README.md  pyproject.toml
projects/team55-ai55/BE/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
projects/team55-ai55/BE/app/: main.py  orchestrator.py  schemas.py
projects/team55-ai55/BE/tests/: test_backend_contracts.py  test_large_task_scheduling.py  test_risk_pm_copy.py  test_schedule_multiblock.py
projects/team56-ai56/: .env.example  .gitignore  README.md  pyproject.toml
projects/team56-ai56/app/: config.py  main.py
projects/team56-ai56/app/agent/: __init__.py  graph.py  llm.py  nodes.py  state.py
projects/team56-ai56/app/api/: routes.py
projects/team56-ai56/app/core/: models.py
projects/team56-ai56/app/db/: repository.py
projects/team56-ai56/app/scripts/: seed_demo.py
projects/team56-ai56/app/services/: evaluator.py  github_client.py  parser.py  pii_guard.py  pipeline.py
projects/team56-ai56/app/tests/: test_github_client.py  test_llm_audit.py  test_parser.py  test_pii_guard.py  test_pipeline.py  test_upstage_evaluator.py
projects/team56-ai56/app/ui/: i18n.py  streamlit_app.py
projects/team56-ai56/data/demo_samples/: README.md
projects/team57-team57/: .env.example  Makefile  README.md  app.py  pyproject.toml  run_graph_demo.py
projects/team57-team57/data/: app.db  qa_check.db  qa_reset_only_seed.db  qa_store_scope.db  sample_reviews.json  verify_demo.db
projects/team57-team57/docs/: agent_architecture.md  demo_scenarios.md  model_comparison_note.md  presentation_script.md
projects/team57-team57/src/: __init__.py  graph.py  state.py
projects/team57-team57/src/db/: __init__.py  connection.py  repository.py  schema.py
projects/team57-team57/src/llm/: __init__.py  anthropic_provider.py  mock_provider.py  openai_provider.py  provider.py
projects/team57-team57/src/nodes/: __init__.py  checklist.py  classifier.py  context_loader.py  input_parser.py  logging_utils.py  pattern.py  persistence.py  reply_drafter.py
projects/team57-team57/src/prompts/: __init__.py  checklist_prompt.py  classifier_prompt.py  reply_prompt.py
projects/team57-team57/src/tools/: __init__.py  db_tools.py  safety_tools.py
projects/team57-team57/tests/: test_graph_flow.py  test_mock_provider.py  test_repository.py
(+1197 files in other folders)
