[project]
name = "mentor-fit"
version = "0.1.0"
description = "AI-powered mentor recommendation system for AI/SW Maestro trainees"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "openai>=2.33.0",
    "pydantic-settings>=2.14.0",
    "uvicorn[standard]>=0.46.0",
    "streamlit>=1.32.0",
    "pandas>=2.2.0",
    "plotly>=5.20",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = ["httpx>=0.28.1", "pytest>=9.0.3", "pytest-asyncio>=1.3.0"]
