[project]
name = "persona-reviewer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "datasets==3.5.0",
    "langchain==0.3.19",
    "langchain-core==0.3.51",
    "langchain-upstage==0.5.0",
    "langgraph==0.2.74",
    "pydantic==2.11.3",
    "python-dotenv==1.1.0",
    "streamlit==1.44.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    ".venv",
    "__pycache__",
    "data",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
