[project]
name = "prscribe"
version = "0.1.0"
description = "PRScribe multi-agent PR-to-blog workspace."
requires-python = ">=3.11"
dependencies = [
    "prscribe-researcher-agent",
    "prscribe-writer-agent",
    "prscribe-context-agent",
    "prscribe-orchestration",
    "prscribe-frontend",
]

[tool.uv.sources]
prscribe-researcher-agent = { workspace = true }
prscribe-writer-agent = { workspace = true }
prscribe-context-agent = { workspace = true }
prscribe-orchestration = { workspace = true }
prscribe-frontend = { workspace = true }

[tool.uv.workspace]
members = [
    "services/researcher_agent",
    "services/writer_agent",
    "services/context_agent",
    "services/orchestration",
    "services/frontend",
]
