[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hireproof-mvp"
version = "0.1.0"
description = "Privacy-first hiring review MVP scaffold"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.1",
  "python-multipart>=0.0.27",
  "pydantic>=2.13.3",
  "requests>=2.33.1",
  "streamlit>=1.32.0",
  "uvicorn>=0.38.0",
  "langgraph>=0.2.50",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "langchain-core>=0.3.0",
  "pypdf>=6.0.0",
  "python-docx>=1.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
