[project]
name = "review-agent"
version = "0.1.0"
description = "Small business review response and complaint pattern AI agent MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "streamlit>=1.45.0",
  "langgraph>=0.2.50",
  "langchain>=0.3.0",
  "openai>=1.30.0",
  "anthropic>=0.34.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
