[tool.poetry]
name = "llm-blind-date"
version = "0.1.0"
description = "Multi-Agent Dating Platform powered by Upstage Solar LLM"
authors = ["llm-blind-date team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"
pydantic-settings = "^2.2.1"
orjson = "^3.10.1"
openai = "^1.30.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
pre-commit = "^3.7.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
