[project]
name = "tail-question-backend"
version = "0.1.0"
description = "Backend for the technical interview tail-question generator (24조)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "openai>=1.54.0",
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-upstage>=0.7.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "pypdf>=5.0.0",
    "langchain-text-splitters>=0.3.0",
    "python-multipart>=0.0.9",
    "SQLAlchemy>=2.0,<3.0",
    "tavily-python>=0.5.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
# Constrain package discovery to `app` so setuptools doesn't trip over the
# `data/` SQLite directory (created at runtime) during editable installs.
include = ["app", "app.*"]

[tool.ruff]
line-length = 100
target-version = "py311"
