[project]
name = "soma-recommender-backend"
version = "0.1.0"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.409",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "packages/agent",
    "packages/shared"
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["apps/api", "packages/agent", "packages/shared"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
include = ["apps/api", "packages/agent", "packages/shared"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
