[project]
name = "prscribe-context-agent"
version = "0.1.0"
description = "Context Agent service for PRScribe."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prscribe-researcher-agent",
    "langgraph>=1.0.0",
    "langchain-openai>=0.2.0",
    "openai>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "ddgs>=9.14.2",
]

[tool.uv.sources]
prscribe-researcher-agent = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "../../services/researcher_agent"]
testpaths = ["tests"]
asyncio_mode = "auto"
