[project]
name = "prscribe-orchestration"
version = "0.1.0"
description = "LangGraph orchestration for PRScribe."
requires-python = ">=3.11"
dependencies = [
    "prscribe-researcher-agent",
    "prscribe-context-agent",
    "prscribe-writer-agent",
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
prscribe-researcher-agent = { workspace = true }
prscribe-context-agent = { workspace = true }
prscribe-writer-agent = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "../../services/researcher_agent",
    "../../services/context_agent",
    "../../services/writer_agent",
]
testpaths = ["tests"]
asyncio_mode = "auto"
