[project]
name = "prscribe-writer-agent"
version = "0.1.0"
description = "Writer Agent service for PRScribe."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "openai>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
prscribe-writer = "writer_agent.cli:main"

[dependency-groups]
dev = [
    "prscribe-researcher-agent",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "../../services/researcher_agent"]
testpaths = ["tests"]
