[project]
name = "soma-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi[standard]>=0.136.1",
    "openai>=1.52.2",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "soma-agent",
]

[tool.uv.sources]
soma-agent = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]
